updated html and js files

--- a/index.html
+++ b/index.html
@@ -317,7 +317,37 @@
                         </div>
                     </div>
 
-                    <div class="absolute">
+                    <div class="absolute" id="specialImage">
+                        <div class="flex text-xs md:text-2xl" id="maindiv">
+                            <ul class="z-[49]" id="ulOne">
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl md:-translate-y-36 md:-translate-x-14 z-[49]">
+                                    <i class="ri-circle-fill"></i> Real-Estate
+                                </li>
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-7 md:translate-y-0 translate-x-8 md:translate-x-10">
+                                    <i class="ri-circle-fill" style="z-index: 1;"></i> Course</li>
+
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-11 md:translate-y-32 translate-x-2 md:-translate-x-5">
+                                    <i class="ri-circle-fill"></i> Ecommerce</li>
+                            </ul>
+                            <ul class="z-[997]" id="ulTwo">
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:-translate-y-20 md:translate-x-24 translate-x-12 -translate-y-2">
+                                    <i class="ri-circle-fill"></i> Restaurant</li>
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:-translate-y-10 md:translate-x-44 translate-x-14 translate-y-4">
+                                    <i class="ri-circle-fill"></i> Astrology
+                                    Business</li>
+                                <li
+                                    class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:translate-y-16 md:translate-x-24 translate-x-10 translate-y-10">
+                                    <i class="ri-circle-fill"></i> Webinar</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="absolute z-[50]">
                         <img src="assests/character.png" alt="">
                     </div>
                 </div>
@@ -1215,6 +1245,7 @@
 
     <!-- Scroll Trigger is needed for Scroll Effects -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
 
