--- a/pricing.html
+++ b/pricing.html
@@ -25,90 +25,105 @@
 
 <body class=" text-white">
 
-           <!-- Main modal -->
-           <div id="default-modal" tabindex="-1" aria-hidden="true"
-           class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[999] justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-           <div class="relative p-4 w-full max-w-2xl max-h-full">
-               <!-- Modal content -->
-               <div class="relative  bg-[#1F2937] rounded-lg shadow">
-                   <!-- Modal header -->
-                   <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                       <h3 class="text-xl font-semibold  text-white">
-                           What's Included
-                       </h3>
-                       <button type="button"
-                           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
-                           data-modal-hide="default-modal">
-                           <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                               viewBox="0 0 14 14">
-                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                   stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
-                           </svg>
-                           <span class="sr-only">Close modal</span>
-                       </button>
-                   </div>
-                   <!-- Modal body -->
-                   <div class="p-4 md:p-5 space-y-4 flex flex-col">
-                       <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Log In</button></a>
-                       <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Home</button></a>
-                       <a href="#morefeatures"><button
-                               class="px-3 py-2 bg-white text-black rounded w-full">Features</button></a>
-                       <a href="#twohands"><button class="px-3 py-2 bg-white text-black rounded w-full">Templates</button></a>
-                       <a href="pricing.html"><button
-                               class="px-3 py-2 bg-white text-black rounded w-full">Pricing</button></a>
-                   </div>
+    <!-- Main modal -->
+    <div id="default-modal" tabindex="-1" aria-hidden="true"
+        class="hidden overflow-y-auto overflow-x-hidden fixed right-0  z-[999] justify-center items-end  h-screen w-[60%]">
+        <div class="relative w-full">
+            <!-- Modal content -->
+            <div class="relative  bg-[#1F2937]  shadow h-screen z-[999] w-full">
+                <!-- Modal header -->
+                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                    <h3 class="text-xl font-semibold  text-white">
+                        What's Included
+                    </h3>
+                    <button type="button"
+                        class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+                        data-modal-hide="default-modal">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
+                <!-- Modal body -->
+                <div class="p-4 md:p-5 space-y-4 flex flex-col">
+                    <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Log In</button></a>
+                    <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Home</button></a>
+                    <a href="#morefeatures"><button
+                            class="px-3 py-2 bg-white text-black rounded w-full">Features</button></a>
+                    <a href="#twohands"><button
+                            class="px-3 py-2 bg-white text-black rounded w-full">Templates</button></a>
+                    <a href="pricing.html"><button
+                            class="px-3 py-2 bg-white text-black rounded w-full">Pricing</button></a>
+                </div>
 
-               </div>
-           </div>
-       </div>
+            </div>
+        </div>
+    </div>
 
-    
 
-       <div id="nav"
-           class="mt-3 md:mt-0 text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
+    <div id="nav"
+        class=" text-base md:text-2xl  z-[998] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
 
-         
+        <div id="alert-border-3"
+            class="w-[100vw]  flex items-center p-4 mb-4  border-t-4 text-green-400 bg-gray-800 border-green-800 -mx-[2vw] -my-[1.2vw] "
+            role="alert">
 
-           <div class="flex justify-between  items-center">
-               <div id="firstnav ">
-                   <a href="index.html" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
-                           class="w-[30px] md:w-[40px] rounded-full">
-                       <span>Bizfunnel</span></a>
-               </div>
-               <div id="secondnav" class=" hidden md:flex gap-[3vw]">
-                   <a href="index.html"
-                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Home</a>
+            <div class="ms-3 text-sm font-medium">
+                A simple success alert with an <a href="#" class="font-semibold underline hover:no-underline">example
+                    link</a>. Give it a click if you like.
+            </div>
+            <button type="button"
+                class="ms-auto -mx-1.5 -my-1.5  rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 inline-flex items-center justify-center h-8 w-8 bg-gray-800 text-green-400 hover:bg-gray-700 md:mr-5"
+                data-dismiss-target="#alert-border-3" aria-label="Close">
+                <span class="sr-only">Dismiss</span>
+                <i class="ri-xrp-line"></i>
+            </button>
+        </div>
 
-                   <a href="#morefeatures"
-                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Features</a>
-                   <a href="#twohands"
-                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Templates</a>
-                   <a href="pricing.html" target="_blank"
-                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Pricing</a>
-               </div>
-               <div id="thirdnav" class="text-xs md:text-base flex gap-[2vw] items-center">
-                   <button
-                       class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
-                       In</button>
-                   <a href="#_"
-                       class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
-                       <span
-                           class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
-                       <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
-                       <span
-                           class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
-                       <span
-                           class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
-                           Now</span>
-                   </a>
-                   <button data-modal-target="default-modal" data-modal-toggle="default-modal"
-                       class="block mx-[15px] md:hidden" type="button">
-                       <i class="ri-align-justify text-[24px]"></i>
-                   </button>
-               </div>
+        <div class="flex justify-between  items-center mt-3 md:mt-0">
+            <div id="firstnav ">
+                <a href="index.html" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
+                        class="w-[30px] md:w-[40px] rounded-full">
+                    <span>Bizfunnel</span></a>
+            </div>
+            <div id="secondnav" class=" hidden md:flex gap-[3vw]">
+                <a href="index.html"
+                    class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Home</a>
 
-           </div>
-       </div>
+                <a href="#morefeatures"
+                    class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Features</a>
+                <a href="#twohands"
+                    class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Templates</a>
+                <a href="pricing.html" target="_blank"
+                    class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Pricing</a>
+            </div>
+            <div id="thirdnav" class="text-xs md:text-base flex gap-[2vw] items-center">
+                <button
+                    class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
+                    In</button>
+                <a href="#_"
+                    class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
+                    <span
+                        class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
+                    <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
+                    <span
+                        class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
+                    <span
+                        class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
+                        Now</span>
+                </a>
+                <button data-modal-target="default-modal" data-modal-toggle="default-modal" id="modalButton"
+                    class="block mx-[15px] md:hidden" type="button">
+                    <i class="ri-align-justify text-[24px]"></i>
+                </button>
+            </div>
+
+        </div>
+    </div>
+
 
     <main class="main3 overflow-hidden">
         <h1 class="text-center font-bold text-5xl my-[25px] md:mt-[4vw] relative  text-green-500">Our Pricing</h1>
@@ -257,10 +272,9 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="/" class="flex items-center">
-                        <img src="assests/logo.jpg" class="mr-3 h-8 rounded-full"
-                            alt="bizfunnel Logo" />
+                        <img src="assests/logo.jpg" class="mr-3 h-8 rounded-full" alt="bizfunnel Logo" />
                         <span
-                            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Bizfunnel</span>
                     </a>
                 </div>
                 <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
@@ -305,8 +319,8 @@
             </div>
             <hr class="my-6 sm:mx-auto border-gray-700 lg:my-8" />
             <div class="sm:flex sm:items-center sm:justify-between">
-                <span class="text-sm sm:text-center text-gray-400">© 2022 <a
-                        href="https://flowbite.com" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+                <span class="text-sm sm:text-center text-gray-400">© 2024 <a href="#"
+                        class="hover:underline">Bizfunnel</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
                     <a href="#" class="text-gray-500 hover:text-white">
@@ -348,6 +362,19 @@
         </div>
     </footer>
 
+
+
+
+    <!--  Gsap is needed for Basic Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <!-- Scroll Trigger is needed for Scroll Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+
+
+
     <!--JS for toggle-->
     <script>
         function myFunction() {
@@ -363,20 +390,21 @@
                 }
             }
         }
+
+
+        let tl = gsap.timeline()
+
+
+
+        const modalButton = document.getElementById("modalButton");
+
+        modalButton.addEventListener('click', () => {
+            tl.from("#default-modal", {
+                x: 200,
+                duration: 0.4
+            })
+        });
     </script>
-
-
-    <!--  Gsap is needed for Basic Effects -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-
-    <!-- Scroll Trigger is needed for Scroll Effects -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-
-
-
-
 
 </body>
 
