updated index.html and js file

--- a/index.html
+++ b/index.html
@@ -326,23 +326,28 @@
                                 </li>
                                 <li
                                     class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-4 md:translate-y-0 translate-x-8 md:translate-x-10">
-                                    <i class="ri-circle-fill" style="z-index: 1;"></i> Course</li>
+                                    <i class="ri-circle-fill" style="z-index: 1;"></i> Course
+                                </li>
 
                                 <li
                                     class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl translate-y-11 md:translate-y-32 translate-x-2 md:-translate-x-5">
-                                    <i class="ri-circle-fill"></i> Ecommerce</li>
+                                    <i class="ri-circle-fill"></i> Ecommerce
+                                </li>
                             </ul>
                             <ul class="z-[997]" id="ulTwo">
                                 <li
                                     class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:-translate-y-20 md:translate-x-24 translate-x-12 -translate-y-2">
-                                    <i class="ri-circle-fill"></i> Restaurant</li>
+                                    <i class="ri-circle-fill"></i> Restaurant
+                                </li>
                                 <li
                                     class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:-translate-y-10 md:translate-x-44 translate-x-14 translate-y-4">
                                     <i class="ri-circle-fill"></i> Astrology
-                                    Business</li>
+                                    Business
+                                </li>
                                 <li
                                     class="p-1 md:p-3 bg-green-600 rounded-xl md:rounded-3xl w-fit md:translate-y-16 md:translate-x-24 translate-x-10 translate-y-10">
-                                    <i class="ri-circle-fill"></i> Webinar</li>
+                                    <i class="ri-circle-fill"></i> Webinar
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -526,87 +531,25 @@
 
             </div>
 
-            <div id="slider"
-                class="relative mt-[20px] md:mt-[vw] flex flex-col md:w-[900px] mx-auto bg-[#2C272A] border-[3px] border-gray-500 rounded-2xl">
-                <div class="flex justify-center items-center ">
-                    <div class="mySlides flex md:flex-row flex-col justify-center items-center">
-
-                        <div class="py-4 px-8">
-                            <h2 class="md:text-3xl font-[500]">
-                                Experience the Power of WhatsApp Marketing: Connect your Landing Page with
-                                WhatsApp
-                                within Second
-                            </h2>
-                            <div class="text-sm md:text-xl my-[2vw]">
-                                Leverage the power of Whatsapp automation to connect personally with your
-                                audience
-                                and skyrocket your conversion rate.
-                            </div>
-                            <div class="text-xs md:text-xl flex flex-col gap-1">
-                                <p>✅ Instant messages & Follow up</p>
-                                <p>✅ Personalised messages</p>
-                                <p>✅ Instant Reply</p>
-                                <p>✅ 24x7 supports</p>
-                                <p>✅ Increases conversion</p>
-                            </div>
-                        </div>
-                        <img class="px-3  w-[200px] md:w-[400px] my-auto" src="assests/marketing2.png">
-                    </div>
-                    <div class="mySlides flex md:flex-row flex-col justify-center items-center">
-
-                        <div class="py-4 px-8">
-                            <h2 class="md:text-3xl font-[500]">
-                                Experience the Power of WhatsApp Marketing: Connect your Landing Page with
-                                WhatsApp
-                                within Second
-                            </h2>
-                            <div class="text-sm md:text-xl my-[2vw]">
-                                Leverage the power of Whatsapp automation to connect personally with your
-                                audience
-                                and skyrocket your conversion rate.
-                            </div>
-                            <div class="text-xs md:text-xl flex flex-col gap-1">
-                                <p>✅ Instant messages & Follow up</p>
-                                <p>✅ Personalised messages</p>
-                                <p>✅ Instant Reply</p>
-                                <p>✅ 24x7 supports</p>
-                                <p>✅ Increases conversion</p>
-                            </div>
-                        </div>
-                        <img class="px-3 w-[200px] md:w-[400px] my-auto" src="assests/marketing1.png">
-                    </div>
-                    <div class="mySlides flex md:flex-row flex-col justify-center items-center">
-
-                        <div class="py-4 px-8">
-                            <h2 class="md:text-3xl font-[500]">
-                                Experience the Power of WhatsApp Marketing: Connect your Landing Page with
-                                WhatsApp
-                                within Second
-                            </h2>
-                            <div class="text-sm md:text-xl my-[2vw]">
-                                Leverage the power of Whatsapp automation to connect personally with your
-                                audience
-                                and skyrocket your conversion rate.
-                            </div>
-                            <div class="text-xs md:text-xl flex flex-col gap-1">
-                                <p>✅ Instant messages & Follow up</p>
-                                <p>✅ Personalised messages</p>
-                                <p>✅ Instant Reply</p>
-                                <p>✅ 24x7 supports</p>
-                                <p>✅ Increases conversion</p>
-                            </div>
-                        </div>
-                        <img class="px-3  w-[200px] md:w-[400px] my-auto" src="assests/marketing2.png">
-                    </div>
+            <div id="multipleSoftware"
+                class="bg-[#2C2A2C] border-2 py-4 px-5 md:px-10 md:py-5 flex flex-col justify-center items-center gap-5 md:gap-[3vw] rounded-3xl">
+                <div class="bg-white p-3 rounded-2xl absolute -translate-y-52">
+                    <img src="https://www.myzer.ai/assets/ezgif.com-gif-maker%20(19).webp" alt="" class="w-[100px] md:w-auto">
                 </div>
-
-                <div class="flex justify-between p-2">
-                    <button
-                        class="p-3 text-xl backdrop-filter backdrop-blur-sm bg-opacity-10 bg-white rounded-full border "
-                        onclick="plusDivs(-1)">&#10094;</button>
-                    <button
-                        class="p-3 text-xl backdrop-filter backdrop-blur-sm bg-opacity-10 bg-white rounded-full border "
-                        onclick="plusDivs(1)">&#10095;</button>
+                <h1 class="md:text-2xl text-lg mt-5 md:mt-20 text-center"> Connect with multiple software using Webhook </h1>
+                <p class="md:text-2xl text-sm text-center">Unleash the superpowers of your landing page by seamlessly integrating
+                    various software tailored to
+                    your requirements. Automate your sales process and funnel effortlessly, empowering you to increase
+                    conversions with a smooth and streamlined flow.</p>
+                <div class="flex md:flex-row flex-col md:text-2xl text-sm md:gap-20 text-center gap-4">
+                    <ul class="flex flex-col md:gap-[2vw] gap-4">
+                        <li>✅ Powerful Integration Capabilities</li>
+                        <li>✅ Real-Time Data Synchronization</li>
+                    </ul>
+                    <ul class="flex flex-col md:gap-[2vw] gap-4">
+                        <li>✅ Effortless Configuration</li>
+                        <li>✅ Advanced Workflow Automation</li>
+                    </ul>
                 </div>
             </div>
 
